# mainframe-demo

./: .gitignore  README.md
_legacy/: .gitignore
output/backend/: README.md  pyproject.toml  store.json
output/backend/app/: __init__.py  main.py  models.py  scheduled_tasks.py  services.py  storage.py
output/backend/tests/: test_api.py  test_scheduled_tasks.py  test_storage.py
output/docs/: mapping.md  record-layouts.md  scheduled-tasks-prompt.md  scheduled-tasks.md
output/frontend/: README.md  angular.json  package-lock.json  package.json  playwright.config.ts  tsconfig.spec.json
output/frontend/e2e/: account-flows.spec.ts  scheduled-tasks.spec.ts
output/frontend/src/: index.html  main.ts  styles.css
output/frontend/src/app/: account-detail.component.ts  account-form.component.ts  account-list.component.ts  api.service.ts  app.component.html  app.component.ts  dashboard.component.ts  interest.component.ts  routes.ts  scheduled-tasks.component.ts  transaction-list.component.ts
skills/cobol-flatfile-online-to-angular-python-json/: SKILL.md
skills/cobol-flatfile-online-to-angular-python-json/references/: api-baseline.md  output-structure.md
